--- a/CSS/where.css
+++ b/CSS/where.css
@@ -26,7 +26,7 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    background: black;
+    background: white;
     animation: transitionIn 2s;
     flex-direction: column;
 }
@@ -176,3 +176,10 @@ body {
 }
 
 /* Hamburger Menu End */
+
+/* Home */
+#map {
+    height: 50em;
+    width: 50em;
+    justify-content: center;
+}
