--- a/CSS/where.css
+++ b/CSS/where.css
@@ -179,7 +179,8 @@ body {
 
 /* Home */
 #map {
-    height: 50em;
-    width: 50em;
-    justify-content: center;
+	height: 50em; width: 50em;
+    z-index: 0;
+	justify-content: center;
+	align-items: center;
 }
