--- a/CSS/style.css
+++ b/CSS/style.css
@@ -187,13 +187,14 @@ body {
     height: 100%;
     animation: animate 30s ease-in-out infinite;
     background-size: cover;
+    animation-delay: 6s;
 }
 
 @keyframes animate {
-    0%, 100% {
+    0%, 20%, 100% {
         background-image: url(../images/statistics-home-1.jpeg);
     }
-    20% {
+    30% {
         background-image: url(../images/statistics-home-2.jpeg);
     }
     40%{
@@ -227,16 +228,18 @@ body {
 
 .details p {
     animation: fade-in-after ease-in 2s;
+    animation-delay: 6s;
 }
 
 .details h1 {
     font-size: 3em;
     color: white;
     animation: fade-in ease-in 1s;
+    animation-delay: 6.1s;
 }
 
 @keyframes fade-in {
-    0% {
+    10% {
         opacity: 0;
     }
     100% {
@@ -267,6 +270,7 @@ body {
     margin-top: 1rem;
     margin-bottom: 10px;
     animation: fade-in-after-p 3s ease-in;
+    animation-delay: 6.1s;
 }
 
 .btn::before{
@@ -290,7 +294,7 @@ body {
 }
 
 @keyframes fade-in-after-p {
-    0%, 35%{
+    0%, 35% {
         opacity: 0;
     } 
     100% {
@@ -298,8 +302,72 @@ body {
     }
 }
 
+/* Intro */
+.splash {
+    background: black;
+    z-index: 2;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    transition: 4s;
+}
+
+.splash-content {
+    color: white;
+    transform: translateY(11em);
+}
+
+.splash.display-none{
+    opacity: 0;
+    z-index: 0;
+    transform: translateY(-100%);
+    transition: 1.5s;
+}
+
+.splash.post_animated {
+    display: none;
+}
+
+#content1 {
+    animation: come-in-first 2s ease-in;
+}
+
+#content2 {
+    animation: come-in-second 3s ease-in;
+}
+
+#content3 {
+    transform: translate(4px, 11em);
+    animation: come-in-third 4s ease-in;
+}
+
+@keyframes come-in-first {
+    0% {
+        transform: translateY(13em);
+        opacity: 0;
+    }
+}
+
+@keyframes come-in-second {
+    0%, 50% {
+        transform: translateY(11.5em);
+        opacity: 0;
+    }
+}
+
+@keyframes come-in-third {
+    0%, 60% {
+        transform: translate(4px, 11.5em);
+        opacity: 0;
+    }
+}
 
 
+
+
+  
 /* Media Queries Start */
 
 @media (max-width:425px) {
