--- a/CSS/statistics.css
+++ b/CSS/statistics.css
@@ -183,7 +183,7 @@ body {
 }
 
 .slider .controls {
-    transform: translate(698.5px, 400px);
+    transform: translate(68%, 40em);
     top: 50%;
     left: 50%;
     width: 100px;
@@ -205,6 +205,7 @@ body {
     right: 0px;
     background: #fff;
     color: #111;
+    transform: translateY(50px);
 }
 
 .slider .controls > .down {
@@ -220,17 +221,19 @@ body {
     display: flex;
 }
 
-.slider .wrapper .left, 
-.slider .wrapper .right {
-    width: 50%;
+.slider .wrapper .left {
+    width: 100%;
     overflow: hidden;
 }
 
-.slider .wrapper .left > div,
-.slider .wrapper .right > div {
+.slider .wrapper .left > div {
     width: 100%;
     height: 100%;
     transition: all 500ms ease-in-out;
+}
+
+.slider .wrapper .right > div {
+    display: none;
 }
 
 .slider .wrapper .left > div {
@@ -248,16 +251,6 @@ body {
 .slider .wrapper .left > div p {
     color: black;
     font-size: 18px;
-}
-
-.slider .wrapper .right > div img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.slider .wrapper .right div:nth-child(1) {
-    margin-top: -400vh;
 }
 
 .section-title{
@@ -280,6 +273,7 @@ body {
     border-radius: 30px;
     transform: translate(2px, 10px);
     margin-left: 10px;
+    transform: translateY(-5em);
 }
 
 .show2 {
@@ -308,7 +302,7 @@ body {
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     ),
-    url(../images/statistics-background1.jpeg) no-repeat;
+    url(../images/statistics-home-1.jpeg) no-repeat;
     background-size: cover;
     background-position: 50% 36%;
 }
@@ -319,7 +313,7 @@ body {
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     ), 
-    url(../images/statisics-background2.jpeg) no-repeat;
+    url(../images/statistics-home-2.jpeg) no-repeat;
     background-size: cover;
     background-position: 50% 36%;
 }
@@ -330,7 +324,7 @@ body {
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     ),
-    url(../images/statistics-background3.jpeg) no-repeat;
+    url(../images/statistics-home-3.jpeg) no-repeat;
     background-size: cover;
     background-position: 50% 36%;
 }
@@ -341,7 +335,7 @@ body {
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     ),
-    url(../images/statistics-background4.jpeg) no-repeat;
+    url(../images/statistics-home-4.jpeg) no-repeat;
     background-size: cover;
     background-position: 50% 36%;
 }
@@ -352,7 +346,7 @@ body {
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     ),
-    url(../images/statistics-background5.jpeg) no-repeat;
+    url(../images/statistics-home-5.jpeg) no-repeat;
     background-size: cover;
     background-position: 50% 36%;
 }
@@ -367,11 +361,13 @@ body {
     transform: translate(5px, 1px);
     margin-left: 10px;
     color: white;
+    transform: translateY(-2em);
 }
 
 .information h6 {
     position: relative;
-    transform: translate(43px, -10px);
+    transform: translate(21px, 5px);
+    color: white;
 }
 
 .information {
@@ -522,13 +518,13 @@ body {
     }
 
     .slider .controls {
-        transform: translate(33.5em, 25em);
+        transform: translate(68%, 30em)
     }
 }
 
 @media (max-width: 1024px) {
     .slider .controls {
-        transform: translate(23.1em, 20em);
+        transform: translate(68%, 29em)
     }
 
     .text, .section-title {
@@ -536,12 +532,18 @@ body {
     }
 
     .information h6 {
-        transform: translate(43px, -40px);
+        transform: translate(20px, -40px);
     }
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 865px) {
+    .slider .controls {
+        transform: translate(68%, 30em)
+    }
+}
+
+@media (max-width: 768px){
     .slider .wrapper .right {
         display: none;
         overflow: hidden;
@@ -553,7 +555,7 @@ body {
     }
 
     .slider .controls {
-        transform: translate(16em, 32em);
+        transform: translate(16em, 28em);
     }
 
     .slider .controls > .up {
@@ -561,15 +563,33 @@ body {
     }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 714px) {
+    .slider .controls {
+        transform: translate(15em, 30em);
+    }
+}
+
+@media (max-width: 587px) {
+    .slider .controls {
+        transform: translate(13em, 30em);
+    }
+}
+
+@media (max-width: 509px) {
+    .slider .controls {
+        transform: translate(13em, 32em);
+    }
+}
+
+@media (max-width: 480px) {
     .text, .section-title {
-        font-size: 20px;
+        font-size: 80%;
         margin-bottom: 100px;
         padding: 24px;
     }
     
     .slider .controls {
-        transform: translate(17em, 20em);
+        transform: translate(20em, 22em);
     }
 
     .slider .controls > .up {
@@ -577,10 +597,52 @@ body {
     }
 
     .information h6 {
-        transform: translate(38px, -108px);
-        font-size: 10px;
+        display: none;
+    }
+
+    .wrapper .left .first .section-title, 
+    .wrapper .left .second .section-title, 
+    .wrapper .left .third .section-title, 
+    .wrapper .left .fourth .section-title, 
+    .wrapper .left .fifth .section-title {
+        transform: translateY(0.01em);
+    }
+
+    .wrapper .left .first .text,
+    .wrapper .left .second .text, 
+    .wrapper .left .third .text,
+    .wrapper .left .fourth .text,
+    .wrapper .left .fifth .text {
+        transform: translateY(0.75em);
     }
 }
+
+@media (max-width: 451px) {
+    .slider .controls {
+        transform: translate(18em, 20em);
+    }
+}
+
+@media (max-width: 412px) {
+    .slider .controls {
+        transform: translate(17em, 20em);
+    }
+
+    .wrapper .left .first .text,
+    .wrapper .left .second .text, 
+    .wrapper .left .third .text,
+    .wrapper .left .fourth .text,
+    .wrapper .left .fifth .text {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 388px) {
+    .slider .controls {
+        transform: translate(15em, 20em);
+    }
+}
+
 
 @media (max-width: 375px) {
     .wrapper .left .first .section-title, 
@@ -588,6 +650,7 @@ body {
     .wrapper .left .third .section-title, 
     .wrapper .left .fourth .section-title, 
     .wrapper .left .fifth .section-title {
+        transform: translateY(0.5em);
         font-size: 2em;
     }
 
@@ -596,12 +659,27 @@ body {
     .wrapper .left .third .text,
     .wrapper .left .fourth .text,
     .wrapper .left .fifth .text {
-        font-size: 75%;
+        transform: translateY(1.5em);
+        font-size: 14px;
     }
 
     .slider .controls {
         transform: translate(15em, 20em);
     } 
+}
+
+@media (max-width: 352px) {
+    .wrapper .left .first .text,
+    .wrapper .left .second .text, 
+    .wrapper .left .third .text,
+    .wrapper .left .fourth .text,
+    .wrapper .left .fifth .text {
+        font-size: 12px;
+    }
+
+    .slider .controls {
+        transform: translate(13em, 20em);
+    }
 }
 
 @media (max-width:320px) {
@@ -610,15 +688,7 @@ body {
     .wrapper .left .third .section-title, 
     .wrapper .left .fourth .section-title, 
     .wrapper .left .fifth .section-title {
-        font-size: 1.25em;
-    }
-
-    .wrapper .left .first .text,
-    .wrapper .left .second .text, 
-    .wrapper .left .third .text,
-    .wrapper .left .fourth .text,
-    .wrapper .left .fifth .text {
-        font-size: 60%;
+        font-size: 1.5em;
     }
 
     .slider .controls {
@@ -627,5 +697,23 @@ body {
 
     .intro h1{
         font-size: 3em;
+    }
+
+    .information h6 {
+        display: none;
+    }
+}
+
+@media (max-width: 310px) {
+    .wrapper .left .first .text,
+    .wrapper .left .second .text, 
+    .wrapper .left .third .text,
+    .wrapper .left .fourth .text,
+    .wrapper .left .fifth .text {
+        font-size: 10.5px;
+    }
+
+    .slider .controls {
+        transform: translate(11em, 20em);
     }
 }
