--- a/CSS/statistics.css
+++ b/CSS/statistics.css
@@ -28,8 +28,17 @@ body {
     padding: 0;
     background: black;
     flex-direction: column;
+    animation: transitionIn 1s;
 }
 
+@keyframes transitionIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 /* Hamburger menu start */
 .menu-wrap{
 	position: fixed;
