--- a/CSS/statistics.css
+++ b/CSS/statistics.css
@@ -131,8 +131,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-150%);
-    width: 1600px;
-    height: 1600px;
+    width: 100%;
+    height: 100%;
     background-color: black;
     display: flex;
     justify-content: center;
