--- a/CSS/where.css
+++ b/CSS/where.css
@@ -123,8 +123,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-150%);
-    width: 1600px;
-    height: 1600px;
+    width: 100%;
+    height: 100%;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -134,7 +134,7 @@ body {
     font-size: 25px;
 }
 
-.menu > div > div{
+.menu > div > div { 
 	max-width: 90vw;
 	max-height: 100vh;
 	opacity: 0;
@@ -163,6 +163,11 @@ body {
     color: gray;
 }
 
+.menu > div > div > ul > li > button:hover{
+    background-color: black;
+    color: gray;
+}
+
 .toggler:checked ~ .menu{
 	visibility: visible;
 }
@@ -181,16 +186,16 @@ body {
 	border: none;
 	outline: none;
 	color: white;
-	padding: 14px 16px;
+	padding: 10px;
 	background-color: inherit;
 	font-family: inherit; 
 	margin: 0; 
 }
   
-.navbar a:hover, .dropdown:hover .dropbtn {
-	color: gray;
+.dropdown:hover {
+	transition: 1s ease-in;
 }
-  
+ 
 .dropdown-content {
 	display: none;
 	position: center;
@@ -213,7 +218,7 @@ body {
 
 .dropdown-content a:hover {
 	color: gray;
-  }
+}
 
 /* Hamburger Menu End */
 
