--- a/CSS/where.css
+++ b/CSS/where.css
@@ -163,11 +163,6 @@ body {
     color: gray;
 }
 
-.menu > div > div > ul > li > button:hover{
-    background-color: black;
-    color: gray;
-}
-
 .toggler:checked ~ .menu{
 	visibility: visible;
 }
@@ -179,6 +174,13 @@ body {
 .toggler:checked ~ .menu > div > div{
 	opacity: 1;
 }
+
+.hover {
+	display: none;
+	position: center;
+	min-width: 160px;
+}
+
 
 /* Dropdown */
 .dropdown .dropbtn {
