--- a/CSS/dive-north.css
+++ b/CSS/dive-north.css
@@ -29,6 +29,7 @@ body {
     background: black;
     animation: transitionIn 2s;
     flex-direction: column;
+    color: white;
 }
 
 /* Hamburger menu start */
@@ -225,31 +226,47 @@ body {
 /* Hamburger Menu End */
 
 /* Welcome Starts */
-p {
-    color: white;
-}
-.wrapper {
-	overflow: hidden;
-	margin: 0 auto;
+.gallery {
+    width: 900px;
+    display: flex;
+    overflow-x: scroll;
 }
 
-.marquee {
-	display: flex;
-	width: 1000%;
+.gallery div {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 20px; 
+    padding: 10px;
+    flex: none;
 }
 
-.square {
-	background-color: #63f78a;
-	margin-right: 30px;
-	width: 220px;
-	height: 220px;
-	border-radius: 8px;
+.gallery div img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+    transition: transform 0.5s;
 }
 
-p {
-	font-size: 22px;
-	font-family: sans-serif;
-	max-width: 600px;
-	margin: 120px auto;
-	line-height: 1.4;
+.gallery::-webkit-scrollbar {
+    display: none;
+}
+
+.gallery-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10% auto;
+}
+
+#backBtn, #nextBtn {
+    width: 50px;
+    cursor: pointer;
+    margin: 40px;
+}
+
+.gallery div img:hover {
+    filter: grayscale(0);
+    cursor: pointer;
+    transform: scale(1.1);
 }
