--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,15 +21,15 @@ html {
 }
 
 body {
-    overflow: hidden;
-    display: flex;
-    min-height: 100vh;
-    margin: 0;
-    padding: 0;
-    background: black;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	background:black;
     animation: transitionIn 2s;
-    flex-direction: column;
 }
+
 
 /* Hamburger menu start */
 .menu-wrap{
@@ -180,48 +180,6 @@ body {
 	position: center;
 	min-width: 160px;
 }
-
-
-/* Dropdown */
-.dropdown .dropbtn {
-	font-size: 30px;
-	border: none;
-	outline: none;
-	color: white;
-	padding: 10px;
-	background-color: inherit;
-	font-family: inherit; 
-	margin: 0; 
-}
-  
-.dropdown:hover {
-	transition: 1s ease-in;
-}
- 
-.dropdown-content {
-	display: none;
-	position: center;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-  
-.dropdown-content a {
-	float: center;
-	color: white;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	font-size: 15px;
-}
-
-.dropdown:hover .dropdown-content {
-	display: block;
-}
-
-.dropdown-content a:hover {
-	color: gray;
-}
-
 /* Hamburger Menu End */
 
 /* Home Page Starts */
