--- a/CSS/where.css
+++ b/CSS/where.css
@@ -28,6 +28,7 @@ body {
 	min-height: 100vh;
 	background:black;
     animation: transitionIn 2s;
+	color: white;
 }
 
 
@@ -180,245 +181,26 @@ body {
 	position: center;
 	min-width: 160px;
 }
-
-
-/* Dropdown */
-.dropdown .dropbtn {
-	font-size: 30px;
-	border: none;
-	outline: none;
-	color: white;
-	padding: 10px;
-	background-color: inherit;
-	font-family: inherit; 
-	margin: 0; 
-}
-  
-.dropdown:hover {
-	transition: 1s ease-in;
-}
- 
-.dropdown-content {
-	display: none;
-	position: center;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-  
-.dropdown-content a {
-	float: center;
-	color: white;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	font-size: 15px;
-}
-
-.dropdown:hover .dropdown-content {
-	display: block;
-}
-
-.dropdown-content a:hover {
-	color: gray;
-}
-
 /* Hamburger Menu End */
 
-/* Splash Starts */
-.section {
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-  
-.one {
-	background: black;
-}
-
-.container1 {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	height: 95vh;
-	padding: 3rem calc((100vw - 1300px) / 2);
-}
-  
-.column-left {
+/* Intro Starts */
+.container {
+	text-align: center;
+	width: 100%;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	color: #000;
-	padding: 0rem 2rem;
-}
-   
-.column-left p {
-	margin-bottom: 2rem;
-	font-size: 4rem;
-	line-height: 1.1;
-}
-
-.text {
-	color: #fff;
-}
-  
-/* Splash Ends */
-
-/* Home */
-#note {
-	color: white;
-	padding: 50px;
-	font-size: 2em;
-}
-
-#gp-map {
-	height: 50em; width: 75em;
-    z-index: 1;
-	margin-top: 10px;
-	border-radius: 10px;
-}
-
-.container {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	max-width: 1200px;
-	flex-wrap: wrap;
-	z-index: 0;
-}
-
-.container .card {
-	position: relative;
-	width: 280px;
-	height: 400px;
-	margin: 30px;
-	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-	border-radius: 15px;
-	background: rgba(255, 255, 255, 0.1);
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-top: 1px solid rgba(255, 255, 255, 0.5);
-	border-left: 1px solid rgba(255, 255, 255, 0.5);
-	backdrop-filter: blur(5px);
-}
-
-.container .card .content {
-	padding: 20px;
-	text-align: center;
-	transition: 0.5s;
-	transform: translateY(100px);
-	opacity: 0;
-}
-
-.container .card:hover .content {
-	transform: translateY(0px);
-	opacity: 1;
-}
-
-.container .card .content h2 {
-	position: absolute;
-	top: -60px;
-	font-size: 6em;
-	color: rgba(255, 255, 255, 0.05);
-	pointer-events: none;
-}
-
-.container .card .content #south{
-	right: 1.5px;
-	font-size: 5.5em;
-}
-
-.container .card .content #north {
-	right: 4px;
-	font-size: 5.5em;
-}
-
-.container .card .content #west {
-	right: 15px;
-	font-size: 6em;
-}
-.container .card .content h3 {
-	font-size: 1.8em;
-	color: #fff;
-	z-index: 1;
-}
-
-.container .card .content p {
-	font-size: 1em;
-	color: #fff;
-	font-weight: 300;
-}
-
-.click_on {
-	color: white;
-	padding: 20px;
-	display: none;
-}
-
-#hover-over {
-	color: white;
-	padding: 10px;
-}
-
-/* Home Ends */
-
-/* Go North */
-.gonorth {
-	color: white;
-	padding: 50px;
-}
-
-.gonorth-content {
-	font-size: 20px;
-	padding-left: 2em;
-	text-align: center;
 	align-items: center;
 	justify-content: center;
-	opacity: 0;
+	background-image: url(../images/philly-map.jpeg);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	
 }
 
-.fade-in-delay {
-	opacity: 1;
-	transition: 1s ease-in;
-	transition-delay: 10s;
-}
 
-.btn {
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid gray;
-    color: gray;
-    cursor: pointer;
-    font-size: 20px;
-    border-radius: 3rem;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-    margin-top: 1rem;
-}
 
-.btn::before{
-    content: ' ';
-    position: absolute;
-    top: 0; right: 0;
-    width: 0%;
-    height: 100%;
-    background: gray;
-    transition: .3s linear;
-    z-index: -1;
-}
-
-.btn:hover::before {
-    width: 100%;
-    left: 0;
-}
-
-.btn:hover{
-    color: #fff;
-}
 
 
 
