--- a/CSS/where.css
+++ b/CSS/where.css
@@ -185,20 +185,63 @@ body {
 
 /* Intro Starts */
 .container {
-	text-align: center;
 	width: 100%;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-image: url(../images/philly-map.jpeg);
+	text-align: center;
+	background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.6),
+	  rgba(0, 0, 0, 0.9)
+    ),
+    url(../images/philly-map.jpeg);
+
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
-	
 }
 
+.container p {
+	font-size: 1.5em;
+	padding: 20px;
+}
+
+.container h1 {
+	font-size: 3em;
+}
+
+.animate {
+	color: white;
+	font-size: 5em;
+	animation: animate 2s ease-in infinite;
+	opacity: 1;
+	padding: 20px;
+	transform: translateY(3em);
+}
+
+
+@keyframes animate {
+	0% {
+		opacity: 1;
+	}
+
+	75% {
+		opacity: 0;
+		transform: translateY(4em);
+	}
+
+	99% {
+		opacity: 0;
+		transform: translateY(3em);
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
 
 
 
